--- a/.gitignore
+++ b/.gitignore
@@ -396,3 +396,18 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+
+## Default ignored files
+/shelf/
+/workspace.xml
+# Rider ignored files
+/.idea.Devv.WebServer.iml
+/contentModel.xml
+/projectSettingsUpdater.xml
+/modules.xml
+# Editor-based HTTP Client requests
+/httpRequests/
+# Datasource local storage ignored files
+/dataSources/
+/dataSources.local.xml
+/.idea
