--- a/_src/Devv.WebServer.Api/Dockerfile
+++ b/_src/Devv.WebServer.Api/Dockerfile
@@ -1,31 +1,22 @@
-﻿FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-USER $APP_UID
-WORKDIR /app
-EXPOSE 80
-EXPOSE 443
-
-# Stage 2: Build stage
+﻿# Stage 1: Build Stage
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
-ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["Devv.WebServer.Api/Devv.WebServer.Api.csproj", "Devv.WebServer.Api/"]
 RUN dotnet restore "Devv.WebServer.Api/Devv.WebServer.Api.csproj"
 COPY . .
 WORKDIR "/src/Devv.WebServer.Api"
-RUN dotnet build "Devv.WebServer.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "Devv.WebServer.Api.csproj" -c Release -o /app/build
 
-# Stage 3: Publish stage
+# Stage 2: Publish Stage
 FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "Devv.WebServer.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "Devv.WebServer.Api.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
-# Stage 4: Final image
-FROM base AS final
+# Stage 3: Use Distroless Runtime Image for more security
+FROM mcr.microsoft.com/dotnet/aspnet:8.0-distroless AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
 
-# Optionally set environment variables for Kestrel port configuration
-ENV ASPNETCORE_URLS="http://*:80;https://*:443"
+EXPOSE 8080
+EXPOSE 8081
 
-# Entry point
 ENTRYPOINT ["dotnet", "Devv.WebServer.Api.dll"]
