--- a/_src/Devv.WebServer.Api/appsettings.json
+++ b/_src/Devv.WebServer.Api/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "AllowedHosts": "*",
   "https_port": 8081,
   "Logging": {
     "LogLevel": {
@@ -6,5 +7,34 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ConfigurationStore": {
+    "Type": "AppSettings or AzureKeyVault or AwsSecretsManager or EnvironmentVariables or StartupParameters",
+    "AzureKeyVaultUri": null,
+    "AwsSecretsManagerRegion": null,
+    "AwsSecretsManagerSecretName": null,
+    "EnvironmentVariables": null,
+    "StartupParameters": null
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "Using": [
+      "Serilog.Sinks.Console"
+    ],
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "restrictedToMinimumLevel": "Debug",
+          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:j}{NewLine}{Properties:j}{NewLine}{Exception}"
+        }
+      }
+    ]
+  }
 }
