--- a/_src/Devv.WebServer.Api/Devv.WebServer.Api.csproj
+++ b/_src/Devv.WebServer.Api/Devv.WebServer.Api.csproj
@@ -8,11 +8,21 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AWSSDK.SecretsManager" Version="3.7.400.20" />
+        <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.3.2" />
         <PackageReference Include="Azure.Identity" Version="1.12.0" />
         <PackageReference Include="Azure.Security.KeyVault.Certificates" Version="4.6.0" />
         <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.6.0" />
         <PackageReference Include="FastEndpoints" Version="5.29.0" />
         <PackageReference Include="FastEndpoints.Swagger" Version="5.29.0" />
+        <PackageReference Include="LazyCache.AspNetCore" Version="2.4.0" />
+        <PackageReference Include="Serilog" Version="4.0.1" />
+        <PackageReference Include="Serilog.AspNetCore" Version="8.0.2" />
+        <PackageReference Include="Serilog.Sinks.ApplicationInsights" Version="4.0.0" />
+        <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+        <PackageReference Include="Serilog.Sinks.Datadog.Logs" Version="0.5.2" />
+        <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
+        <PackageReference Include="Serilog.Sinks.Seq" Version="8.0.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
         <PackageReference Include="Yarp.ReverseProxy" Version="2.2.0" />
     </ItemGroup>
@@ -21,6 +31,11 @@
       <Content Include="..\.dockerignore">
         <Link>.dockerignore</Link>
       </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Certificates\" />
+      <Folder Include="Data\" />
     </ItemGroup>
 
 </Project>
