--- a/_src/Devv.WebServer.Api/Devv.WebServer.Api.csproj
+++ b/_src/Devv.WebServer.Api/Devv.WebServer.Api.csproj
@@ -16,6 +16,19 @@
         <PackageReference Include="FastEndpoints" Version="5.29.0" />
         <PackageReference Include="FastEndpoints.Swagger" Version="5.29.0" />
         <PackageReference Include="LazyCache.AspNetCore" Version="2.4.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.8" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.8" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.8">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
+        <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
         <PackageReference Include="Serilog" Version="4.0.1" />
         <PackageReference Include="Serilog.AspNetCore" Version="8.0.2" />
         <PackageReference Include="Serilog.Sinks.ApplicationInsights" Version="4.0.0" />
@@ -34,8 +47,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Certificates\" />
-      <Folder Include="Data\" />
+      <Folder Include="Features\Hosts\" />
     </ItemGroup>
 
 </Project>
