Static file serving
Add logic to host static files
Added default paths for mounting
Added file sync defaults

--- a/_src/Devv.WebServer.Api/Devv.WebServer.Api.csproj
+++ b/_src/Devv.WebServer.Api/Devv.WebServer.Api.csproj
@@ -48,6 +48,7 @@
 
     <ItemGroup>
       <Folder Include="Features\Hosts\" />
+      <Folder Include="StaticSites\" />
     </ItemGroup>
 
 </Project>
