--- a/_src/Devv.WebServer.Api/appsettings.json
+++ b/_src/Devv.WebServer.Api/appsettings.json
@@ -24,7 +24,8 @@
       }
     },
     "Using": [
-      "Serilog.Sinks.Console"
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.File"
     ],
     "WriteTo": [
       {
@@ -34,7 +35,22 @@
           "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
           "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:j}{NewLine}{Properties:j}{NewLine}{Exception}"
         }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "%LOG_PATH%/log-.txt",
+          "rollingInterval": "Day"
+        }
       }
-    ]
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId"
+    ],
+    "Properties": {
+      "Application": "Devv.Gateway"
+    }
   }
 }
