--- a/_src/Devv.WebServer.Api/Devv.WebServer.Api.csproj
+++ b/_src/Devv.WebServer.Api/Devv.WebServer.Api.csproj
@@ -5,10 +5,11 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+        <UserSecretsId>d6ccf7e3-de3a-40fd-8fd5-418e37416fae</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="AWSSDK.SecretsManager" Version="3.7.400.20"/>
+        <PackageReference Include="AWSSDK.SecretsManager" Version="3.7.400.21" />
         <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.3.2"/>
         <PackageReference Include="Azure.Identity" Version="1.12.0"/>
         <PackageReference Include="Azure.Security.KeyVault.Certificates" Version="4.6.0"/>
@@ -33,10 +34,10 @@
         <PackageReference Include="Serilog.AspNetCore" Version="8.0.2"/>
         <PackageReference Include="Serilog.Sinks.ApplicationInsights" Version="4.0.0"/>
         <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0"/>
-        <PackageReference Include="Serilog.Sinks.Datadog.Logs" Version="0.5.2"/>
+        <PackageReference Include="Serilog.Sinks.Datadog.Logs" Version="0.5.3" />
         <PackageReference Include="Serilog.Sinks.File" Version="6.0.0"/>
         <PackageReference Include="Serilog.Sinks.Seq" Version="8.0.0"/>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.3" />
         <PackageReference Include="Yarp.ReverseProxy" Version="2.2.0"/>
     </ItemGroup>
 
