--- a/_src/Gateway/appsettings.json
+++ b/_src/Gateway/appsettings.json
@@ -18,7 +18,7 @@
   },
   "DataContextOptions": {
     "Provider": "SqlServer",
-    "ConnectionString": "Server=host.docker.internal,1433;Database=Devv.SqlServer.Test;User Id=sa;Password=Password1234;TrustServerCertificate=true"
+    "ConnectionString": "Server=host.docker.internal,1433;Database=Devv.SqlServer.Test;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=true"
   },
   "GatewayOptions": {
     "ManagementDomain": "localhost"
