--- a/_src/Endpoints/Endpoints.csproj
+++ b/_src/Endpoints/Endpoints.csproj
@@ -18,9 +18,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="$(DotNetVersion)" />
-        <PackageReference Include="FastEndpoints" Version="5.31.0" />
-        <PackageReference Include="FastEndpoints.Swagger" Version="5.31.0" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.1" />
+        <PackageReference Include="FastEndpoints" Version="5.33.0.12-beta" />
+        <PackageReference Include="FastEndpoints.Swagger" Version="5.33.0.12-beta" />
 		<PackageReference Include="Mediator.SourceGenerator" Version="3.0.0-*">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
