--- a/_src/Endpoints/Endpoints.csproj
+++ b/_src/Endpoints/Endpoints.csproj
@@ -25,14 +25,14 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.2" />
-        <PackageReference Include="FastEndpoints" Version="5.33.0.12-beta" />
-        <PackageReference Include="FastEndpoints.Swagger" Version="5.33.0.12-beta" />
-        <PackageReference Include="Mediator.SourceGenerator" Version="3.0.0-*">
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.7" />
+        <PackageReference Include="FastEndpoints" Version="7.0.1" />
+        <PackageReference Include="FastEndpoints.Swagger" Version="7.0.1" />
+        <PackageReference Include="Mediator.SourceGenerator" Version="3.0.0-preview.65">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Mediator.Abstractions" Version="3.0.0-*" />
+        <PackageReference Include="Mediator.Abstractions" Version="3.0.0-preview.65" />
     </ItemGroup>
 
     <ItemGroup>
