--- a/_src/Gateway/Gateway.csproj
+++ b/_src/Gateway/Gateway.csproj
@@ -9,79 +9,43 @@
         <UserSecretsId>d6ccf7e3-de3a-40fd-8fd5-418e37416fae</UserSecretsId>
     </PropertyGroup>
 
+    <!-- MVP Simplified Package References -->
     <ItemGroup>
-      <Compile Remove="FastEndpoints\**" />
-      <Content Remove="FastEndpoints\**" />
-      <EmbeddedResource Remove="FastEndpoints\**" />
-      <None Remove="FastEndpoints\**" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.4.0" />
-        <PackageReference Include="Azure.Identity" Version="1.14.2" />
-        <PackageReference Include="Azure.Security.KeyVault.Certificates" Version="4.8.0" />
-        <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.8.0" />
-        <PackageReference Include="FastEndpoints" Version="7.0.1" />
-        <PackageReference Include="FastEndpoints.Swagger" Version="7.0.1" />
-        		
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.7" />
+        <!-- Core Framework -->
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.1" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
+        
+        <!-- YARP Reverse Proxy -->
+        <PackageReference Include="Yarp.ReverseProxy" Version="2.3.0" />
+        
+        <!-- Entity Framework Core (SQLite only for MVP) -->
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.7" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.7">
             <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+            <IncludeInPackageTargets>false</IncludeInPackageTargets>
         </PackageReference>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.7" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.7" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.7" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.7">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-        <PackageReference Include="Microsoft.Extensions.Caching.Hybrid" Version="9.7.0" />
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.7" />
-        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
-        <PackageReference Include="OpenTelemetry.Exporter.Prometheus.AspNetCore" Version="1.12.0-beta.1" />
-        <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="9.0.0-rc.1.efcore.9.0.0" />
-        <PackageReference Include="Serilog" Version="4.3.0" />
+        
+        <!-- Authentication -->
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.1" />
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.5.0" />
+        
+        <!-- Validation -->
+        <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+        
+        <!-- Health Checks -->
+        <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="9.0.1" />
+        
+        <!-- Logging -->
         <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
-        <PackageReference Include="Serilog.Sinks.ApplicationInsights" Version="4.1.0-dev-02304" />
         <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
-        <PackageReference Include="Serilog.Sinks.Datadog.Logs" Version="0.5.6" />
         <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
-        <PackageReference Include="Serilog.Sinks.Seq" Version="9.0.0" />
-        <PackageReference Include="Yarp.ReverseProxy" Version="2.3.0" />
-
-		<PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="*" />
-		<PackageReference Include="Aspire.Pomelo.EntityFrameworkCore.MySql" Version="*" />
-		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="*" />
+        
     </ItemGroup>
 
+    <!-- Docker Support -->
     <ItemGroup>
-        <Content Include="..\.dockerignore">
-            <Link>.dockerignore</Link>
-        </Content>
-    </ItemGroup>
-
-    <ItemGroup>
-        <Folder Include="_certs\" />
-        <Folder Include="StaticSites\" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <ProjectReference Include="..\..\_aspire\AspireApp1.ServiceDefaults\ServiceDefaults.csproj" />
-        <ProjectReference Include="..\Data\Data.csproj" />
-        <ProjectReference Include="..\Domain\Domain.csproj" />
-        <ProjectReference Include="..\Endpoints\Endpoints.csproj" />
-        <ProjectReference Include="..\Shared\Shared.csproj" />
-        <ProjectReference Include="..\UI.BlazorWasm\UI.BlazorWasm.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <_ContentIncludedByDefault Remove="UI\BlazorWasm\App.razor" />
-      <_ContentIncludedByDefault Remove="UI\BlazorWasm\Pages\Certificates.razor" />
-      <_ContentIncludedByDefault Remove="UI\BlazorWasm\Pages\Configuration.razor" />
-      <_ContentIncludedByDefault Remove="UI\BlazorWasm\Pages\Index.razor" />
-      <_ContentIncludedByDefault Remove="UI\BlazorWasm\Pages\Metrics.razor" />
-      <_ContentIncludedByDefault Remove="UI\BlazorWasm\Shared\MainLayout.razor" />
+        <Content Include="Dockerfile" />
+        <Content Include=".dockerignore" />
     </ItemGroup>
 
 </Project>
