Add MCP Client/Server projects and local config pattern
Introduces Graph.User.Mcp.Client and Graph.User.Mcp.Server projects with supporting code, configuration, and documentation. Updates .gitignore and README to document a new appsettings.local.json pattern for local secrets, and adds these files to .gitignore. Aspire AppHost and solution files are updated to reference the new projects and support local config loading. Also includes minor improvements to Mediator source generator output and adds a CLAUDE.md for validation considerations.

--- a/_aspire/AspireApp1.AppHost/AppHost.csproj
+++ b/_aspire/AspireApp1.AppHost/AppHost.csproj
@@ -14,6 +14,7 @@
 	<ItemGroup>
 		<ProjectReference Include="..\..\_src\Gateway\Gateway.csproj" />
 		<ProjectReference Include="..\..\_src\Shared\Shared.csproj" />
+		<ProjectReference Include="..\..\_src\Graph.User.Mcp.Server\Graph.User.Mcp.Server.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
