--- a/_src/Gateway/Gateway.csproj
+++ b/_src/Gateway/Gateway.csproj
@@ -27,7 +27,13 @@
         
         <!-- Authentication -->
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.1" />
-        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.5.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="9.0.1" />
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.6.1" />
+        
+        <!-- Microsoft Graph and Authentication -->
+        <PackageReference Include="Microsoft.Graph" Version="5.89.0" />
+        <PackageReference Include="Microsoft.Graph.Auth" Version="1.0.0-preview.7" />
+        <PackageReference Include="Microsoft.Identity.Web" Version="3.3.0" />
         
         <!-- Validation -->
         <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
