--- a/_src/Gateway/appsettings.Development.json
+++ b/_src/Gateway/appsettings.Development.json
@@ -15,7 +15,7 @@
   },
   "DataContextOptions": {
     "Provider": "SqlServer",
-    "ConnectionString": "Server=host.docker.internal,1433;Database=Devv.SqlServer.Test;User Id=sa;Password=Password1234;"
+    "ConnectionString": ""
   },
   "GatewayOptions": {
     "ManagementDomain": "localhost"
