--- a/_src/Gateway/appsettings.json
+++ b/_src/Gateway/appsettings.json
@@ -5,33 +5,62 @@
       "Microsoft.AspNetCore": "Warning",
       "Microsoft.EntityFrameworkCore": "Warning",
       "Gateway.Middleware.PromptInjectionMiddleware": "Debug",
-      "Gateway.Services.PromptSafetyService": "Debug"
+      "Gateway.Services.PromptSafetyService": "Debug",
+      "Yarp.ReverseProxy.Health": "Information"
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=gateway.db"
   },
-  "Authentication": {
-    "Jwt": {
-      "Authority": "https://login.microsoftonline.com/{TENANT_ID}/v2.0",
-      "Audience": "api://arkana-gateway",
-      "ValidateIssuer": true,
-      "ValidateAudience": true,
-      "ValidateLifetime": true,
-      "ClockSkew": "00:05:00"
-    }
-  },
   "ReverseProxy": {
     "Routes": {
-      "mcp-route": {
-        "ClusterId": "mcp-cluster",
+      "mcp-msgraph-health-route": {
+        "ClusterId": "mcp-msgraph-cluster",
         "Match": {
-          "Path": "/mcp/{**catch-all}"
+          "Path": "/mcp/msgraph/health"
         },
         "Transforms": [
           {
-            "PathPattern": "/{**catch-all}"
+            "PathSet": "/health"
+          },
+          {
+            "RequestHeader": "X-Forwarded-Proto",
+            "Set": "{RequestScheme}"
+          },
+          {
+            "RequestHeader": "X-Forwarded-Host",
+            "Set": "{RequestHost}"
+          }
+        ]
+      },
+      "mcp-msgraph-info-route": {
+        "ClusterId": "mcp-msgraph-cluster",
+        "Match": {
+          "Path": "/mcp/msgraph/info"
+        },
+        "Transforms": [
+          {
+            "PathSet": "/"
+          },
+          {
+            "RequestHeader": "X-Forwarded-Proto",
+            "Set": "{RequestScheme}"
+          },
+          {
+            "RequestHeader": "X-Forwarded-Host",
+            "Set": "{RequestHost}"
+          }
+        ]
+      },
+      "mcp-msgraph-route": {
+        "ClusterId": "mcp-msgraph-cluster",
+        "Match": {
+          "Path": "/mcp/msgraph/{**catch-all}"
+        },
+        "Transforms": [
+          {
+            "PathPattern": "/mcp/{**catch-all}"
           },
           {
             "RequestHeader": "X-Forwarded-Proto",
@@ -45,11 +74,18 @@
       }
     },
     "Clusters": {
-      "mcp-cluster": {
+      "mcp-msgraph-cluster": {
         "LoadBalancingPolicy": "RoundRobin",
+        "HealthCheck": {
+          "Enabled": true,
+          "Interval": "00:00:30",
+          "Timeout": "00:00:10",
+          "Threshold": 3,
+          "Path": "/health"
+        },
         "Destinations": {
           "default": {
-            "Address": "https://localhost:7001/"
+            "Address": "http://localhost:7000/"
           }
         }
       }
