--- a/_test/Gateway.Tests/Gateway.Tests.csproj
+++ b/_test/Gateway.Tests/Gateway.Tests.csproj
@@ -10,9 +10,9 @@
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="9.0.2" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.2" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.2" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.7" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.7" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="xunit" Version="2.9.2" />
@@ -26,6 +26,8 @@
   <ItemGroup>
     <ProjectReference Include="..\..\_src\Gateway\Gateway.csproj" />
     <ProjectReference Include="..\..\_src\Data\Data.csproj" />
+    <ProjectReference Include="..\..\_src\Shared\Shared.csproj" />
+    <ProjectReference Include="..\..\_src\Endpoints\Endpoints.csproj" />
   </ItemGroup>
 
 </Project>
