--- a/_src/Gateway/Gateway.csproj
+++ b/_src/Gateway/Gateway.csproj
@@ -39,7 +39,7 @@
         <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
         
         <!-- Health Checks -->
-        <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="9.0.1" />
+        <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="9.0.7" />
         
         <!-- Logging -->
         <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
@@ -52,6 +52,11 @@
     <ItemGroup>
         <Content Include="Dockerfile" />
         <Content Include=".dockerignore" />
+    </ItemGroup>
+
+    <!-- Project References -->
+    <ItemGroup>
+        <ProjectReference Include="..\Data\Data.csproj" />
     </ItemGroup>
 
 </Project>
